# kosha

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  kosha-serve.service
.handoffs/: 2026-04-27T15-39-57.md
docs/: architecture.md  candle-bf16-matmul-pr.md  cloud-ingest.md  handoff.md  kosha-sketch.md  model-server-sketch.md  remote-ingest.md
docs/.handoffs/: 2026-05-06T18-11-51.md  2026-05-07T09-18-02.md  2026-05-07T11-22-35.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
migrations/: 0001_init.sql  0002_chunk_embed_meta.sql  0003_collections_tags.sql
scripts/: runpod-setup.sh
src/: chunk.rs  config.rs  db.rs  embed.rs  error.rs  ingest.rs  lib.rs  main.rs  mcp.rs  store.rs
src/decompose/: epub.rs  html.rs  image.rs  markdown.rs  mod.rs  pdf.rs  plain_text.rs
src/embed/: http.rs  local.rs  mod.rs
src/tools/: collections.rs  health.rs  leaf.rs  leaves.rs  mod.rs  outline.rs  read.rs  search.rs
