[package]
name = "kosha"
version = "0.1.0"
edition = "2024"
description = "Document intelligence layer for the manas ecosystem."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "kosha"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars"] }
schemars = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx", "halfvec"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
half = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fastembed = { path = "/home/josh/soft/fastembed-local", default-features = false, features = ["qwen3", "hf-hub-native-tls"] }
candle-core = "0.10.2"

[patch.crates-io]
candle-core = { path = "/home/josh/soft/candle/candle-core" }
candle-nn = { path = "/home/josh/soft/candle/candle-nn" }
gemm = { path = "/home/josh/soft/gemm/gemm" }
